[tool.poetry]
name = "dsscan"
version = "0.1.0"
description = ""
authors = ["w0ltage <abulgakovvv@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ds-store = "^1.3.1"
requests = "^2.32.3"
click = "^8.1.7"

[tool.poetry.scripts]
dsscan = "dsscan.entry:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
